# deepgram-rust-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  context7.json
.agents/skills/deepgram-rust-audio-intelligence/: SKILL.md
.agents/skills/deepgram-rust-conversational-stt/: SKILL.md
.agents/skills/deepgram-rust-maintaining-sdk/: SKILL.md
.agents/skills/deepgram-rust-management-api/: SKILL.md
.agents/skills/deepgram-rust-speech-to-text/: SKILL.md
.agents/skills/deepgram-rust-text-intelligence/: SKILL.md
.agents/skills/deepgram-rust-text-to-speech/: SKILL.md
.agents/skills/deepgram-rust-voice-agent/: SKILL.md
.agents/skills/maintaining-rust-sdk/: SKILL.md
.agents/skills/using-audio-intelligence/: SKILL.md
.agents/skills/using-conversational-stt/: SKILL.md
.agents/skills/using-management-api/: SKILL.md
.agents/skills/using-speech-to-text/: SKILL.md
.agents/skills/using-text-intelligence/: SKILL.md
.agents/skills/using-text-to-speech/: SKILL.md
.agents/skills/using-voice-agent/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature-request.md  feature_request.md
.github/workflows/: cargo-checkmate.yaml  ci.yaml  rust-checks.yaml
examples/: README.md  advanced_stream.rs  billing.rs  callback.rs  invitations.rs  keys.rs  live.rs  make_prerecorded_request_builder.rs  members.rs  microphone_stream.rs  prerecorded_from_file.rs  prerecorded_from_url.rs  projects.rs  scopes.rs  simple_stream.rs  text_to_speech_to_file.rs  text_to_speech_to_stream.rs  usage.rs
examples/auth/: grant_token.rs
examples/manage/: projects.rs  usage.rs
examples/manage/members/: members.rs
examples/prerecorded_from_file/: main.rs
examples/speak/rest/: text_to_speech_to_file.rs  text_to_speech_to_stream.rs
examples/speak/text_to_speech_to_file/: text_to_speech_to_file.rs
examples/speak/text_to_speech_to_stream/: text_to_speech_to_stream.rs
examples/transcription/flux/: microphone_flux.rs  simple_flux.rs  simple_flux_token.rs
examples/transcription/live/: simple_stream.rs
examples/transcription/live/microphone_stream/: microphone_stream.rs
examples/transcription/live/simple_stream/: simple_stream.rs
examples/transcription/prerecorded/: make_prerecorded_request_builder.rs  prerecorded_from_url.rs
examples/transcription/prerecorded/callback/: callback.rs
examples/transcription/prerecorded/make_prerecorded_request_builder/: make_prerecorded_request_builder.rs
examples/transcription/prerecorded/prerecorded_from_file/: prerecorded_from_file.rs
examples/transcription/prerecorded/prerecorded_from_url/: prerecorded_from_url.rs
examples/transcription/rest/: callback.rs  make_prerecorded_request_builder.rs  prerecorded_from_file.rs  prerecorded_from_url.rs
examples/transcription/websocket/: 16_keepalive_close_stream.rs  callback_stream.rs  microphone_stream.rs  simple_stream.rs
scripts/: version
src/: billing.rs  invitations.rs  keys.rs  lib.rs  members.rs  projects.rs  redacted.rs  response.rs  scopes.rs  speak.rs  transcription.rs  usage.rs
src/auth/: mod.rs  options.rs  response.rs
src/billing/: response.rs
src/common/: audio_source.rs  batch_response.rs  flux_response.rs  mod.rs  options.rs  redacted_string.rs  response.rs  stream_response.rs
src/invitations/: response.rs
src/keys/: options.rs  response.rs
src/listen/: flux.rs  live.rs  mod.rs  prerecorded.rs  rest.rs  speech_to_text.rs  websocket.rs
src/manage/: billing.rs  invitations.rs  keys.rs  members.rs  mod.rs  projects.rs  scopes.rs  usage.rs
src/manage/billing/: mod.rs  mod_billing.rs
src/manage/invitations/: invitations.rs  mod.rs  mod_invitations.rs  response.rs
src/manage/keys/: keys.rs  mod.rs  mod_keys.rs  options.rs  response.rs
src/manage/members/: mod.rs  mod_members.rs  response.rs
src/manage/projects/: mod.rs  mod_projects.rs  options.rs  projects.rs  response.rs
src/manage/scopes/: mod.rs  mod_scopes.rs  response.rs  scopes.rs
src/manage/usage/: get_fields_options.rs  get_usage_options.rs  list_requests_options.rs  mod.rs  mod_usage.rs  response.rs  usage.rs
src/members/: response.rs
src/prerecorded/: audio_source.rs  mod.rs  options.rs  response.rs
src/prerecorded/options/: mod.rs  serialize_options_tests.rs
src/projects/: options.rs  response.rs
src/scopes/: response.rs
src/speak/: mod.rs  options.rs  rest.rs  text_to_speech.rs  websocket.rs
src/speak/rest/: options.rs
src/transcription/: audio_source.rs  common.rs  common_options.rs  live.rs  old_live.rs  prerecorded.rs
src/transcription/common/: options.rs  response.rs
src/transcription/live/: options.rs  response.rs
src/transcription/prerecorded/: audio_source.rs  options.rs  response.rs
src/usage/: get_fields_options.rs  get_usage_options.rs  list_requests_options.rs  response.rs
tests/: flux_e2e.rs  flux_unknown_messages.rs  readme_version.rs
