[package]
name = "deepgram"
version = "0.5.0"
authors = ["Deepgram <developers@deepgram.com>"]
edition = "2021"
description = "Official Rust SDK for Deepgram's automated speech recognition APIs."
license = "MIT"
repository = "https://github.com/deepgram-devs/deepgram-rust-sdk"
keywords = ["deepgram", "asr", "transcription", "ai", "speech-to-text"]
categories = ["api-bindings", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO Investigate which of these dependencies can go behind features.
bytes = "1"
futures = "0.3"
http = "0.2"
pin-project = "1"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
tokio = { version = "1.13.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"], optional = true }
tokio-util = { version = "0.7.1", features = ["codec", "io"] }
tungstenite = { version = "0.20.1", optional = true }
url = "2"
uuid = { version = "1", features = ["serde"] }
# Dependencies below are specified only to satisfy minimal-versions.
proc-macro2 = "1.0.60"

[dev-dependencies]
pkg-config = "0.3.27"
cpal = "0.13"
crossbeam = "0.8"

[features]
default = ["prerecorded", "live"]
live = ["dep:tungstenite", "dep:tokio-tungstenite"]
prerecorded = []

[[example]]
name = "prerecorded_from_file"
required-features = ["prerecorded"]

[[example]]
name = "callback"
required-features = ["prerecorded"]

[[example]]
name = "make_prerecorded_request_builder"
required-features = ["prerecorded"]

[[example]]
name = "microphone_stream"
required-features = ["live"]

[[example]]
name = "prerecorded_from_url"
required-features = ["prerecorded"]

[[example]]
name = "simple_stream"
required-features = ["live"]

[[example]]
name = "advanced_stream"
required-features = ["live"]
