[package]
name = "deepgram"
version = "0.7.0"
authors = ["Deepgram <developers@deepgram.com>"]
edition = "2021"
description = "Official Rust SDK for Deepgram's automated speech recognition APIs."
license = "MIT"
repository = "https://github.com/deepgram-devs/deepgram-rust-sdk"
keywords = ["deepgram", "asr", "transcription", "ai", "speech-to-text", "text-to-speech"]
categories = ["api-bindings", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO Investigate which of these dependencies can go behind features.
audio = "0.2.0"
bytes = "1"
futures = "0.3"
http = "0.2"
pin-project = "1"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls", "stream"] }
rodio = { version = "0.17.0", optional = true }
serde = { version = "1.0.25", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"], optional = true }
tokio-util = { version = "0.7.1", features = ["codec", "io"] }
tungstenite = { version = "0.20.1", optional = true }
url = "2"
uuid = { version = "1", features = ["serde"] }
# Dependencies below are specified only to satisfy minimal-versions.
proc-macro2 = "1.0.60"
pkg-config = { version = "0.3.30", optional = true }

[dev-dependencies]
cpal = "0.13"
crossbeam = "0.8"

[features]
default = ["manage", "listen", "speak"]
manage = []
listen = ["dep:tungstenite", "dep:tokio-tungstenite"]
speak = ["dep:rodio", "dep:pkg-config"]

[[example]]
name = "prerecorded_from_file"
path = "examples/transcription/prerecorded/prerecorded_from_file/prerecorded_from_file.rs"
required-features = ["listen"]

[[example]]
name = "callback"
path = "examples/transcription/prerecorded/callback/callback.rs"
required-features = ["listen"]

[[example]]
name = "make_prerecorded_request_builder"
path = "examples/transcription/prerecorded/make_prerecorded_request_builder/make_prerecorded_request_builder.rs"
required-features = ["listen"]

[[example]]
name = "microphone_stream"
path = "examples/transcription/prerecorded/microphone_stream/microphone_stream.rs"
required-features = ["listen"]

[[example]]
name = "prerecorded_from_url"
path = "examples/transcription/prerecorded/prerecorded_from_url/prerecorded_from_url.rs"
required-features = ["listen"]

[[example]]
name = "simple_stream"
path = "examples/transcription/live/simple_stream/simple_stream.rs"
required-features = ["listen"]

[[example]]
name = "text_to_speech_to_file"
path = "examples/speak/text_to_speech_to_file/text_to_speech_to_file.rs"
required-features = ["speak"]

[[example]]
name = "text_to_speech_to_stream"
path = "examples/speak/text_to_speech_to_stream/text_to_speech_to_stream.rs"
required-features = ["speak"]
