[package]
name = "deepgram"
version = "0.6.9"
authors = ["Deepgram <developers@deepgram.com>"]
edition = "2021"
description = "Community Rust SDK for Deepgram's automated speech recognition APIs."
license = "MIT"
repository = "https://github.com/deepgram/deepgram-rust-sdk"
keywords = [
  "transcription",
  "voice-ai",
  "text-to-speech",
  "speech-to-text",
  "asr",
]
categories = ["api-bindings", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO Investigate which of these dependencies can go behind features.
bytes = "1"
futures = "^0.3"
http = "1.3"
pin-project = "1"
reqwest = { version = "^0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = { version = "^1.45.1", features = ["full"] }
tokio-stream = "^0.1.17"
tokio-tungstenite = { version = "^0.27.0", features = [
  "rustls-tls-webpki-roots",
], optional = true }
tokio-util = { version = "^0.7", features = ["codec", "io"] }
tungstenite = { version = "^0.27", optional = true }
url = "2"
uuid = { version = "1", features = ["serde"] }
# Dependencies below are specified only to satisfy minimal-versions.
sha256 = "^1.6.0"
anyhow = "^1.0.98"
tracing = ">=0.1.41"

[dev-dependencies]
cpal = "^0.16"
crossbeam = "0.8"
audio = "0.2.0"
rodio = { version = "0.20" }
pkg-config = { version = "0.3.30" }

[features]
default = ["manage", "listen", "speak"]
manage = []
listen = ["dep:tungstenite", "dep:tokio-tungstenite"]
speak = []

[[example]]
name = "prerecorded_from_file"
path = "examples/transcription/rest/prerecorded_from_file.rs"
required-features = ["listen"]

[[example]]
name = "callback"
path = "examples/transcription/rest/callback.rs"
required-features = ["listen"]

[[example]]
name = "make_prerecorded_request_builder"
path = "examples/transcription/rest/make_prerecorded_request_builder.rs"
required-features = ["listen"]

[[example]]
name = "prerecorded_from_url"
path = "examples/transcription/rest/prerecorded_from_url.rs"
required-features = ["listen"]

[[example]]
name = "simple_stream"
path = "examples/transcription/websocket/simple_stream.rs"
required-features = ["listen"]

[[example]]
name = "callback_stream"
path = "examples/transcription/websocket/callback_stream.rs"
required-features = ["listen"]

[[example]]
name = "microphone_stream"
path = "examples/transcription/websocket/microphone_stream.rs"
required-features = ["listen"]

[[example]]
name = "text_to_speech_to_file"
path = "examples/speak/rest/text_to_speech_to_file.rs"
required-features = ["speak"]

[[example]]
name = "text_to_speech_to_stream"
path = "examples/speak/rest/text_to_speech_to_stream.rs"
required-features = ["speak"]
